--- a/lib/profile_web/components/layouts/root.html.heex
+++ b/lib/profile_web/components/layouts/root.html.heex
@@ -9,7 +9,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/js/app.js"}>
     </script>
   </head>
-  <body>
+  <body class="bg-gradient-to-t from-80% from-[#f7f7f7] min-h-screen">
     {@inner_content}
   </body>
 </html>
